[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/StylesMenuItems/AngelWings.png" type="Texture" id=1]
[ext_resource path="res://Scenes/SceneList/Menu Scenes/Buttons/ContinueButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/SceneList/Menu Scenes/Buttons/ExitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/SceneList/Menu Scenes/Buttons/NewGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/StylesMenuItems/Logo/Hero1.png" type="Texture" id=5]
[ext_resource path="res://Scenes/SceneList/ActorScenes/PlayersScenes/Information/Fonts/RobotoSlab-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/SceneList/Menu Scenes/CoverScene/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Scripts/Menus/TitleScreen.gd" type="Script" id=8]
[ext_resource path="res://Scenes/SceneList/Menu Scenes/Buttons/Controls.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 6 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.85059
margin_top = -3.70117
margin_right = 1.85059
margin_bottom = -3.70117
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1146.0
margin_bottom = 710.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1026.0
margin_bottom = 196.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 200.0
margin_right = 1026.0
margin_bottom = 493.0
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 785.0
margin_bottom = 293.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 52.0
margin_right = 785.0
margin_bottom = 112.0
scene_to_load = "res://Scenes/SceneList/Season-1 Stages/Prelude.tscn"

[node name="Label" parent="Menu/CenterRow/Buttons/NewGameButton" index="0"]
margin_left = 140.647
margin_top = -16.6555
margin_right = 419.647
margin_bottom = 48.3445

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 116.0
margin_right = 785.0
margin_bottom = 176.0
scene_to_load = "res://Scenes/SceneList/Menu Scenes/CoverScene/FadeIn.tscn"

[node name="Label" parent="Menu/CenterRow/Buttons/ContinueButton" index="0"]
margin_left = 144.049
margin_top = -3.70124
margin_right = 402.05
margin_bottom = 61.2988

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 180.0
margin_right = 785.0
margin_bottom = 240.0

[node name="Label" parent="Menu/CenterRow/Buttons/ExitButton" index="0"]
margin_left = 151.751
margin_top = 11.1038
margin_right = 267.751
margin_bottom = 76.1038

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 789.0
margin_right = 1026.0
margin_bottom = 293.0

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_right = 237.0
margin_bottom = 293.0
texture = ExtResource( 5 )

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 497.0
margin_right = 1026.0
margin_bottom = 630.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Version: beta"

[node name="FadeIn" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Controls" parent="." instance=ExtResource( 9 )]
margin_left = 877.506
margin_top = 605.494
margin_right = 1662.51
margin_bottom = 665.494
scene_to_load = "res://Scenes/SceneList/Menu Scenes/Buttons/JoyControlsScene.tscn"
[connection signal="fade_in_finished" from="FadeIn" to="." method="_on_FadeIn_fade_in_finished"]
[connection signal="pressed" from="Controls" to="." method="_on_Controls_pressed"]

[editable path="Menu/CenterRow/Buttons/NewGameButton"]

[editable path="Menu/CenterRow/Buttons/ContinueButton"]

[editable path="Menu/CenterRow/Buttons/ExitButton"]
